welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:9: error: value lenhth is not a member of Array[Int]
  for (i<-0 to nums.lenhth-1){
                    ^